# bitpin-interview-task

./: .env.sample  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  pyproject.toml  redis_repository.py
bitrate/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  services.py  urls.py
posts/migrations/: 0001_initial.py
posts/serializers/: post_rate_serializer.py  post_serializer.py
posts/views/: __init__.py  views.py
scripts/: docker-entrypoint.sh
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_userprofile_uuid.py
users/serializers/: user_profile_serializer.py
